# grook

./: .gitignore  pyproject.toml
grook/: recreate_schema.py  server.py
grook/templates/: base.html  index.html
tests/: conftest.py  test_grook.py
