[tool.poetry]
name = "grook"
version = "0.1.0"
description = "Group Book Web App"
authors = ["Nigel Gott <nigel.gott@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
grook = 'grook.server:main'
